Update 'oeg41kbpr-java-quarkus' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-c179f55c47.jqqg.p3.openshiftapps.com/rhtap/rhtap-qe-java-quarkus:73a19f525b2262f3493fd57c8621c6e58f8f29d1@sha256:26f559d87f533e70813a50165d9f271ed0141bef694fab99bfaa3937e790ecee

--- a/components/oeg41kbpr-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/oeg41kbpr-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: oeg41kbpr-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-c179f55c47.jqqg.p3.openshiftapps.com/rhtap/rhtap-qe-java-quarkus:73a19f525b2262f3493fd57c8621c6e58f8f29d1@sha256:26f559d87f533e70813a50165d9f271ed0141bef694fab99bfaa3937e790ecee
+          name: container-image
